--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 env=ENV:Prod
-env=abulkabul=Prod
-env=XXXX:Prod
+;env=abulkabul=Prod
+;env=XXXX:Prod
 module = pweb_app:wsgi
 socket = PWeb.sock
 master = true
