Working on uWsgi Server

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,6 +6,7 @@ master = true
 processes = 5
 chmod-socket = 666
 http-websockets = true
+https-websockets = true
 die-on-term = true
 gevent = 1000
 vacuum = true
