Working on uWsgi Server

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,10 +3,10 @@ env = env=Prod
 module = pweb_app:wsgi
 socket = PWeb.sock
 master = true
-processes = 5
+processes = 1
 chmod-socket = 666
 http-websockets = true
-https-websockets = true
+enable-threads = true
 die-on-term = true
-gevent = 1000
+gevent = 3000
 vacuum = true
